# claude-agent-setup

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  DOC.md  HYBRID_AGENT_PLAN.md  Makefile  codex-claude-code-doc.md  doc.md
.claude/: settings.json
.claude/commands/: DOC.md  audit.md  build.md  commit.md  deps.md  doc.md  explain.md  fix.md  handoff.md  hybrid-commit.md  hybrid-doc.md  hybrid-fix.md  hybrid-pr.md  hybrid-test.md  init.md  pr.md  refactor.md  research.md  review.md  security-scan.md  status.md  test.md  todo.md
.github/workflows/: verify.yml
agents/: codex-init.md  cpp-agent.md  doc.md  go-agent.md  orchestrator.md  python-agent.md
artifacts/: doc.md
artifacts/debug/: README.md
artifacts/metrics/: README.md  summary.json
artifacts/runs/: 2026-04-08-phase-5-6-rollout-run-01.md  2026-04-09-claude-handoff-smoke-run-01.md  2026-04-09-command-surface-alignment-run-01.md  2026-04-09-python-reverse-skill-run-01.md  2026-04-12-production-prep-run-01.md  README.md  TEMPLATE.md  (+1 more)
cctest/: doc.md
ccwork/: doc.md
config/: agents.yaml  doc.md  permissions.yaml  validation.yaml
docs/: doc.md  index.md
scripts/: build.sh  check_artifacts.py  check_docs_drift.py  check_toolchain.sh  delegate_to_claude.py  doc.md  generate_metrics_summary.py  lib.sh  lint.sh  run_claude_from_plan.py  run_claude_handoff.sh  test.sh
tools/: doc.md
tools/cpp/: CMakeLists.txt  tools.cpp  tools.h  tools_test.cpp
tools/python/: SKILL.md  pagination_tool.py  pyproject.toml  skills.py  test_claude_bridge_runner.py  test_pagination_tool.py  test_skills.py
(+42 files in other folders)
